--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="dropdown">
                 <button tabindex="0">Men's Team</button>
 <ul class="dropdown-content">
-  <li><a href="mens_team/Parker Razelun18820257.html">Parker Razelun18820257</a></li>
+  <li><a href="mens_team/Parker%20Razelun18820257.html">Parker Razelun18820257</a></li>
   <li><a href="mens_team/Jude Shafer23349716.html">Jude Shafer23349716</a></li>
   <li><a href="mens_team/Matthew Guikema23349678.html">Matthew Guikema23349678</a></li>
   <li><a href="mens_team/Jack Robichaud18820279.html">Jack Robichaud18820279</a></li>
