--- a/index.html
+++ b/index.html
@@ -28,49 +28,51 @@
             <div class="dropdown">
                 <button tabindex="0">Men's Team</button>
 <ul class="dropdown-content">
-  <li><a href="mens_team/Parker%Razelun18820257.html">Parker Razelun18820257</a></li>
-  <li><a href="mens_team/Jude%Shafer23349716.html">Jude Shafer23349716</a></li>
-  <li><a href="mens_team/Matthew%Guikema23349678.html">Matthew Guikema23349678</a></li>
-  <li><a href="mens_team/Jack%Robichaud18820279.html">Jack Robichaud18820279</a></li>
-  <li><a href="mens_team/Emmett%Strait26322025.html">Emmett Strait26322025</a></li>
-  <li><a href="mens_team/Jackson%Cichewicz26322046.html">Jackson Cichewicz26322046</a></li>
-  <li><a href="mens_team/Caspian%Ruiz26460414.html">Caspian Ruiz26460414</a></li>
-  <li><a href="mens_team/Sage%O'Lor26322021.html">Sage O'Lor26322021</a></li>
-  <li><a href="mens_team/Rowan%Kim24801855.html">Rowan Kim24801855</a></li>
-  <li><a href="mens_team/Juan%Luis%Llanes23564880.html">Juan Luis Llanes23564880</a></li>
-  <li><a href="mens_team/Raphael%Fournier23564875.html">Raphael Fournier23564875</a></li>
-  <li><a href="mens_team/Ezekiel%Paloff23349707.html">Ezekiel Paloff23349707</a></li>
-  <li><a href="mens_team/Marlowe%Hartnett21147174.html">Marlowe Hartnett21147174</a></li>
-  <li><a href="mens_team/Garrett%Comer21615274.html">Garrett Comer21615274</a></li>
-  <li><a href="mens_team/Santiago%Valenzuela23821078.html">Santiago Valenzuela23821078</a></li>
-  <li><a href="mens_team/Loki%Bowser21147175.html">Loki Bowser21147175</a></li>
-  <li><a href="mens_team/Leo%Chi26460401.html">Leo Chi26460401</a></li>
-  <li><a href="mens_team/Zeke%Lafferty21142917.html">Zeke Lafferty21142917</a></li>
-  <li><a href="mens_team/Oskar%MacArthur23349698.html">Oskar MacArthur23349698</a></li>
-  <li><a href="mens_team/Evan%Leach26322027.html">Evan Leach26322027</a></li>
-  <li><a href="mens_team/Paxton%Rose23349712.html">Paxton Rose23349712</a></li>
-  <li><a href="mens_team/Enshu%Kuan23687884.html">Enshu Kuan23687884</a></li>
-  <li><a href="mens_team/Lawrence%Wang26460421.html">Lawrence Wang26460421</a></li>
-  <li><a href="mens_team/Roman%Stilwell25989957.html">Roman Stilwell25989957</a></li>
-  <li><a href="mens_team/Elliot%Daley26322015.html">Elliot Daley26322015</a></li>
-  <li><a href="mens_team/Alex%Nemecek18820260.html">Alex Nemecek18820260</a></li>
-  <li><a href="mens_team/Micah%Winchell21147172.html">Micah Winchell21147172</a></li>
-  <li><a href="mens_team/Kyle%Krasan21245954.html">Kyle Krasan21245954</a></li>
-  <li><a href="mens_team/Connor%Jett24801564.html">Connor Jett24801564</a></li>
-  <li><a href="mens_team/Henry%Strait22288700.html">Henry Strait22288700</a></li>
-  <li><a href="mens_team/Martin%Gehrke19203161.html">Martin Gehrke19203161</a></li>
-  <li><a href="mens_team/Bruno%Cifaldi21147176.html">Bruno Cifaldi21147176</a></li>
-  <li><a href="mens_team/Amir%Abston25395576.html">Amir Abston25395576</a></li>
-  <li><a href="mens_team/Nicholas%Yuan21615273.html">Nicholas Yuan21615273</a></li>
-  <li><a href="mens_team/Phylip%Elliott23636797.html">Phylip Elliott23636797</a></li>
-  <li><a href="mens_team/Cole%Harms26322018.html">Cole Harms26322018</a></li>
-  <li><a href="mens_team/Joowon%Lee23349696.html">Joowon Lee23349696</a></li>
-  <li><a href="mens_team/Ethan%Miller23349703.html">Ethan Miller23349703</a></li>
-  <li><a href="mens_team/William%Johnson23564879.html">William Johnson23564879</a></li>
-  <li><a href="mens_team/Dylan%Hanley23349680.html">Dylan Hanley23349680</a></li>
-  <li><a href="mens_team/Leland%Weiser18820273.html">Leland Weiser18820273</a></li>
-  <li><a href="mens_team/Gustaf%Finn21147171.html">Gustaf Finn21147171</a></li>
+  <li><a href="mens_team/ColeHarms26322018.html">ColeHarms26322018</a></li>
+  <li><a href="mens_team/WilliamJohnson23564879.html">WilliamJohnson23564879</a></li>
+  <li><a href="mens_team/JoowonLee23349696.html">JoowonLee23349696</a></li>
+  <li><a href="mens_team/EthanMiller23349703.html">EthanMiller23349703</a></li>
+  <li><a href="mens_team/AmirAbston25395576.html">AmirAbston25395576</a></li>
+  <li><a href="mens_team/DylanHanley23349680.html">DylanHanley23349680</a></li>
+  <li><a href="mens_team/ParkerRazelun18820257.html">ParkerRazelun18820257</a></li>
+  <li><a href="mens_team/NicholasYuan21615273.html">NicholasYuan21615273</a></li>
+  <li><a href="mens_team/AlexNemecek18820260.html">AlexNemecek18820260</a></li>
+  <li><a href="mens_team/MatthewGuikema23349678.html">MatthewGuikema23349678</a></li>
+  <li><a href="mens_team/GarrettComer21615274.html">GarrettComer21615274</a></li>
+  <li><a href="mens_team/MartinGehrke19203161.html">MartinGehrke19203161</a></li>
+  <li><a href="mens_team/EvanLeach26322027.html">EvanLeach26322027</a></li>
+  <li><a href="mens_team/SageO'Lor26322021.html">SageO'Lor26322021</a></li>
+  <li><a href="mens_team/LawrenceWang26460421.html">LawrenceWang26460421</a></li>
+  <li><a href="mens_team/JacksonCichewicz26322046.html">JacksonCichewicz26322046</a></li>
+  <li><a href="mens_team/HenryStrait22288700.html">HenryStrait22288700</a></li>
+  <li><a href="mens_team/JackRobichaud18820279.html">JackRobichaud18820279</a></li>
+  <li><a href="mens_team/RomanStilwell25989957.html">RomanStilwell25989957</a></li>
+  <li><a href="mens_team/JuanLuisLlanes23564880.html">JuanLuisLlanes23564880</a></li>
+  <li><a href="mens_team/BrunoCifaldi21147176.html">BrunoCifaldi21147176</a></li>
+  <li><a href="mens_team/LeoChi26460401.html">LeoChi26460401</a></li>
+  <li><a href="mens_team/EnshuKuan23687884.html">EnshuKuan23687884</a></li>
+  <li><a href="mens_team/KyleKrasan21245954.html">KyleKrasan21245954</a></li>
+  <li><a href="mens_team/JudeShafer23349716.html">JudeShafer23349716</a></li>
+  <li><a href="mens_team/EzekielPaloff23349707.html">EzekielPaloff23349707</a></li>
+  <li><a href="mens_team/PaxtonRose23349712.html">PaxtonRose23349712</a></li>
+  <li><a href="mens_team/ConnorJett24801564.html">ConnorJett24801564</a></li>
+  <li><a href="mens_team/SantiagoValenzuela23821078.html">SantiagoValenzuela23821078</a></li>
+  <li><a href="mens_team/MicahWinchell21147172.html">MicahWinchell21147172</a></li>
+  <li><a href="mens_team/GustafFinn21147171.html">GustafFinn21147171</a></li>
+  <li><a href="mens_team/RaphaelFournier23564875.html">RaphaelFournier23564875</a></li>
+  <li><a href="mens_team/MarloweHartnett21147174.html">MarloweHartnett21147174</a></li>
+  <li><a href="mens_team/LokiBowser21147175.html">LokiBowser21147175</a></li>
+  <li><a href="mens_team/PhylipElliott23636797.html">PhylipElliott23636797</a></li>
+  <li><a href="mens_team/ElliotDaley26322015.html">ElliotDaley26322015</a></li>
+  <li><a href="mens_team/OskarMacArthur23349698.html">OskarMacArthur23349698</a></li>
+  <li><a href="mens_team/LelandWeiser18820273.html">LelandWeiser18820273</a></li>
+  <li><a href="mens_team/EmmettStrait26322025.html">EmmettStrait26322025</a></li>
+  <li><a href="mens_team/ZekeLafferty21142917.html">ZekeLafferty21142917</a></li>
+  <li><a href="mens_team/RowanKim24801855.html">RowanKim24801855</a></li>
+  <li><a href="mens_team/CaspianRuiz26460414.html">CaspianRuiz26460414</a></li>
 </ul>
+
+
             <!-- Dropdown content will be added here by the Python script -->
             </div>
         </div>
