--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
 </head>
 <body>
     <div class="grid">
-        <div class="title">
-            <h1>PROGRUN</h1>
-        </div>
+        <header>
+            <div class="title">
+                <h1>PROGRUN</h1>
+            </div>
+        </header>
         <div class="image">
             <img src="images/homepage_image.webp" alt="runners"/>
         </div>
@@ -71,6 +73,23 @@
   <li><a href="mens_team/RowanKim24801855.html">RowanKim24801855</a></li>
   <li><a href="mens_team/CaspianRuiz26460414.html">CaspianRuiz26460414</a></li>
 </ul>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
             <!-- Dropdown content will be added here by the Python script -->
