--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="https://kit.fontawesome.com/7703f3cfbe.js" crossorigin="anonymous"></script>
     <link rel = "stylesheet" href = "css/reset.css">
     <link rel = "stylesheet" href = "css/style.css">
+    <script src="dropdown.js" defer></script>
 
     
     <title>Home Page</title>
@@ -73,25 +74,6 @@
   <li><a href="mens_team/RowanKim24801855.html">RowanKim24801855</a></li>
   <li><a href="mens_team/CaspianRuiz26460414.html">CaspianRuiz26460414</a></li>
 </ul>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
             <!-- Dropdown content will be added here by the Python script -->
             </div>
         </div>
