--- a/mens_team/WilliamJohnson23564879.html
+++ b/mens_team/WilliamJohnson23564879.html
@@ -17,8 +17,8 @@
       <title>William Johnson</title>
    </head>
    <body>
-   <a class= "skip" href = "#main">Skip to Main Content</a>
    <div class="grid"> 
+   <a class= "skip" href = "#main">Skip to Main Content</a>
       <header>
          <div class="logo"><h1>PROGRUN</h1></div>
          <nav class="top_nav">
@@ -167,7 +167,7 @@
             2552 North Maple Road<br>
             Ann Arbor, MI 48103<br>   
             <a href = "https://sites.google.com/aaps.k12.mi.us/skylinecrosscountry2021/home">XC Skyline Page</a><br>
-            Follow us on Instagram <a href = "https://www.instagram.com/a2skylinexc/"><i class="fa-brands fa-instagram" aria-label="Instagram"></i>
+            Follow us on Instagram <a href = "https://www.instagram.com/a2skylinexc/"><i class="fa-brands fa-instagram" aria-label="Instagram"></i></a>
          </footer>
       </div>
    </body>
