--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=375, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,6 +24,7 @@
                 <h1>PROGRUN</h1>
             </div>
         </header>
+        <main>
         <div class="image">
             <img src="images/homepage_image.webp" alt="runners"/>
         </div>
@@ -75,10 +76,20 @@
   <li><a href="mens_team/CaspianRuiz26460414.html">CaspianRuiz26460414</a></li>
 </ul>
 
+
             <!-- Dropdown content will be added here by the Python script -->
             </div>
         </div>
-
+    </main>
+    <footer class="footer">
+        <p>
+        Skyline High School<br>
+        <address>
+        2552 North Maple Road<br>
+        Ann Arbor, MI 48103<br>   
+        <a href = "https://sites.google.com/aaps.k12.mi.us/skylinecrosscountry2021/home">XC Skyline Page</a><br>
+        <a href = "https://www.instagram.com/a2skylinexc/">Follow us on Instagram <i class="fa-brands fa-instagram" aria-label="Instagram"></i></a>
+     </footer>
     </div>
 </body>
 </html>
