--- a/mens_team/PhylipElliott23636797.html
+++ b/mens_team/PhylipElliott23636797.html
@@ -2,7 +2,7 @@
    <html lang="en">
    <head>
       <meta charset="UTF-8">
-      <meta name="viewport" content="width=375, initial-scale=1.0">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <!-- Get your own FontAwesome ID -->
        <script src="https://kit.fontawesome.com/7703f3cfbe.js" crossorigin="anonymous"></script>
 
